base-pkg/main/default/objects/Product2/fields/Difficulty__c.field-meta.xml
<CustomField>
    <fullName>Difficulty__c</fullName>
    <label>Difficulty</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Easy</fullName>
                <default>true</default>
                <label>Easy</label>
            </value>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Hard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>