base-pkg/main/default/objects/Product2/fields/HasColor__c.field-meta.xml
<CustomField>
    <fullName>HasColor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does this plant have colors, or is it simply green?</description>
    <label>Has Color?</label>
    <type>Checkbox</type>
</CustomField>