base-pkg/main/default/objects/Product2/fields/HasVarieties__c.field-meta.xml
<CustomField>
    <fullName>HasVarieties__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If several subtypes are for sale for this plant.</description>
    <label>Has Varieties?</label>
    <type>Checkbox</type>
</CustomField>