base-pkg/main/default/objects/Product2/fields/SubVariety__c.field-meta.xml
<CustomField>
    <fullName>SubVariety__c</fullName>
    <description>If several varieties were available, this is the variant.</description>
    <label>Sub Variety</label>
    <length>32</length>
    <type>Text</type>
</CustomField>